# Street-Turf-Global-Football

./: .gitignore  README.md
.github/workflows/: build-android.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  vision_api.py
backend/app/: __init__.py  config.py  image_processing.py  main.py  repository.py  schemas.py
backend/app/inpainting/: __init__.py  base.py  diffusers_provider.py  factory.py  mock.py  service.py
backend/tests/: test_api.py  test_image_processing.py  test_vision_api.py
docs/: ARCHITECTURE.md  GITHUB_MOBILE.md
shared/examples/: home-turf-manifest.json
unity/: README.md
unity/Assets/Resources/: StreetTurfRuntime.shader
unity/Assets/Scenes/: Bootstrap.unity
unity/Assets/StreetTurf/Scripts/Gameplay/: ArcadePlayerController.cs  DynamicMatchCamera.cs  TouchActionButton.cs  TouchJoystick.cs  UrbanBallController.cs
unity/Assets/StreetTurf/Scripts/Poc/: BallPhysics.cs  GameManager.cs  GeoStreetRuntime.cs  GoalTrigger.cs  MobilePlayerController.cs  PocBootstrap.cs  RuntimeSurfaceMaterial.cs  StreetBiomeData.cs  StreetGenerator.cs
unity/Assets/StreetTurf/Scripts/TurfData/: HomeTurfLoader.cs  HomeTurfModels.cs  HomeTurfUploadClient.cs
unity/Assets/StreetTurf/Scripts/TurfEditor/: BoundaryPlacementController.cs  GoalPlacementController.cs  SurfaceMaskPainter.cs
unity/Assets/StreetTurf/Shaders/: StreetMaskPreview.shader
unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  ProjectVersion.txt
