[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "street-turf-backend"
version = "0.1.0"
description = "API POC for Street Turf targeted inpainting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "python-multipart>=0.0.20,<1",
    "Pillow>=11,<13",
    "pydantic>=2.10,<3",
    "httpx>=0.28,<1",
    "openai>=2,<3",
]

[project.optional-dependencies]
ai = [
    "accelerate>=1.2,<2",
    "diffusers>=0.32,<1",
    "safetensors>=0.5,<1",
    "torch>=2.5,<3",
    "transformers>=4.47,<6",
]
dev = [
    "pytest>=8,<10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
